Add label to relationship